# QSF

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeLists_IOS.txt  DIFFICULTY_RESCUE_IMPLEMENTATION.md  Dockerfile  Doxyfile  GUI_MINER_IMPROVEMENTS.md  HF18_FINAL_VERIFICATION.md  HF18_IMPLEMENTATION_SUMMARY.md  HF18_SAFETY_VERIFICATION.md  HF18_SAFETY_VERIFICATION_COMPLETE.md  LICENSE  MIGRATION_GUIDE.md  Makefile  README-Windows-Build.md  README.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.2.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.0.2.md  RELEASE_NOTES_v3.0.3.md  RELEASE_NOTES_v3.0.4.md  RELEASE_NOTES_v3.0.5.md  RELEASE_NOTES_v3.0.6.md  RELEASE_NOTES_v3.0.7.md  RELEASE_NOTES_v3.0.8.md  RELEASE_NOTES_v3.0.9.md  SECURITY_IMPROVEMENTS.md  SECURITY_RELEASE_v2.1.1.md  USER_GUIDE_LEGACY_BLOCKS.md  VERSION_UPDATE_SUMMARY.md  build.sh  build_windows_msys.sh  clean_build_windows.sh  debug_strdup_fix.sh  fix_strdup_server.sh  qsf-gui-miner.desktop  qsf-mainnet-seed.service  (+6 more)
build-windows/: compile_commands.json  test-protobuf.pb.cc  test-protobuf.pb.h
build-windows/translations/: translation_files.h
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  Doxyfile.in  FindCcache.cmake  FindUnbound.cmake  GitVersion.cmake  SetClangTidy.cmake  Version.cmake  test-libusb-version.c  test-protobuf.cpp  test-static-assert.c
contrib/: CMakeLists.txt
contrib/brew/: Brewfile
contrib/depends/: Makefile  README.md
contrib/epee/: CMakeLists.txt
contrib/gitian/: DOCKRUN.md  README.md  dockrun.sh  gitian-android.yml  gitian-build.py  gitian-freebsd.yml  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/tor/: qsf-over-tor.sh
docs/: ANONYMITY_NETWORKS.md  COMPILING_DEBUGGING_TESTING.md  CONTRIBUTING.md  LEVIN_PROTOCOL.md  PORTABLE_STORAGE.md  README.i18n.md  RELEASE_CHECKLIST.md  ZMQ.md
patches/: miniupnp_strdup_fix.patch
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in  version.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  locked_txn.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain-stats-readme.md  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h  print_genesis_tx.cpp
src/blocks/: CMakeLists.txt
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  base58.cpp  base58.h  boost_serialization_helper.h  combinator.cpp  combinator.h  command_line.cpp  command_line.h  common_fwd.h  data_cache.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  error.h  expect.h  http_connection.h  i18n.cpp  i18n.h  json_util.h  notify.cpp  notify.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  pod-class.h  pruning.cpp  pruning.h  rpc_client.h  scoped_message_writer.h  sfinae_helpers.h  spawn.cpp  spawn.h  stack_trace.cpp  stack_trace.h  (+9 more)
src/crypto/: CMakeLists.txt  blake256.c  blake256.h  c_threads.h  chacha.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  duration.h  generic-ops.h  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  hmac-keccak.c  hmac-keccak.h  initializer.h  quantum_safe.cpp  quantum_safe.h  random.c  random.h  rx-slow-hash.c  skein_port.h  slow-hash.c  tree-hash.c
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  blobdatatype.h  connection_context.cpp  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_format_utils_basic.cpp  difficulty.cpp  difficulty.h  events.h  fwd.h  hardfork.cpp  hardfork.h  merge_mining.cpp  merge_mining.h  miner.cpp  miner.h  subaddress_index.h  tx_extra.h  verification_context.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  blockchain_storage_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  i_core_events.h  qsf_network_monitor.cpp  qsf_network_monitor.h  tx_pool.cpp  tx_pool.h  tx_sanity_check.cpp  tx_sanity_check.h  tx_verification_utils.cpp  tx_verification_utils.h
src/cryptonote_protocol/: CMakeLists.txt  block_queue.cpp  block_queue.h  cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  enums.h  fwd.h  levin_notify.cpp  levin_notify.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  command_server.h  core.h  daemon.cpp  daemon.h  executor.cpp  executor.h  main.cpp  p2p.h  protocol.h  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: CMakeLists.txt  daemonizer.h  posix_daemonizer.inl  posix_fork.cpp  posix_fork.h  windows_daemonizer.inl  windows_service.cpp  windows_service.h  windows_service_runner.h
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  dns_checks.cpp  (+1 more)
src/gui_miner/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  mining_worker.cpp  mining_worker.h  quantum_safe_widget.cpp  quantum_safe_widget.h  resources.qrc  wallet_manager.cpp  wallet_manager.h  zmq_rpc_client.cpp  zmq_rpc_client.h
tests/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h.in  create_test_disks.sh  cryptolib.pl  cryptotest.pl  hash-target.cpp  io.h
translations/: CMakeLists.txt  generate_translations_header.c  qsf_de.ts  qsf_el.ts  qsf_es.ts  qsf_fr.ts  qsf_hi.ts  qsf_is.ts  qsf_it.ts  qsf_ja.ts  qsf_nb_NO.ts  qsf_ne.ts  qsf_nl.ts  qsf_pl.ts  qsf_prt.ts  qsf_pt-br.ts  qsf_sk.ts  qsf_sr.ts  qsf_sv.ts  qsf_tr.ts  qsf_zu.ts
utils/: doxygen-publish.sh
(+603 files in other folders)
